@@ -27,7 +27,6 @@ void
 testTortureExecute (void)
 {
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
-#if !defined(__SDCC_gbz80) // bug #2329
   acc = 0xffff00000000ll;
   addhi (1);
   if (acc != 0x1000000000000ll)
@@ -36,7 +35,6 @@ testTortureExecute (void)
   if (acc != 0xffff00000000ll)
     ASSERT (0);
   return;
-#endif
 #endif
 }
 
